# NeuTTS-FastAPI

./: .gitignore  Contributing.md  LICENSE  README.md  pyproject.toml
api/src/: main.py
api/src/routers/: openai_compatible.py
docker/cpu/: .dockerignore  Dockerfile  docker-compose.yml  entrypoint.sh
