[project]
name = "neutts-fastapi"
version = "0.1.0"
description = "NeuTTS FastAPI wrapper"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
    "librosa==0.11.0",
    "neucodec>=0.0.4",
    "numpy==2.2.6",
    "phonemizer==3.3.0",
    "soundfile==0.13.1",
    "torch==2.8.0",
    "transformers==4.56.1",
    "resemble-perth==1.0.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = []

[project.optional-dependencies]
cpu = [
    "torch==2.8.0",
]